# simple-maps-scraper

./: .env.example  .gitignore  README.md  checkpoint.py  email_verifier.py  extract_emails.py  main.py  maps_scraper.py  output.py  pyproject.toml
agent/: graph.py
browser/: manager.py  stealth.py
llm/: client.py  key_pool.py
test/: contact_agent.py  test.py  test_maps.py
test/scratch/: bitly.html  test_response.py
ui/: dashboard.py  gui.py  log_handler.py
