[project]
name = "maps-scraper"
version = "0.1.0"
description = "Google Maps scraper with LLM-powered email extraction — LangGraph + Playwright"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.52.0",
    "langgraph>=0.5.0",
    "openai>=1.80.0",
    "pillow>=11.0.0",
]
